# RAG-prototype

./: .gitignore  README.md  config.py  ingest.py  main.py  pyproject.toml  query.py  requirements.txt
